--- a/index.html
+++ b/index.html
@@ -13,5 +13,14 @@
     <h1 id="title">Coding Quiz Challenge</h1>
     <button id="start">Start Quiz</button>
     <script src="script.js"></script>
+    <form id="end-screen" class="hidden">
+        <input
+          type="text"
+          name="initials"
+          id="initials"
+          placeholder="Enter Initials"
+        />
+        <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
