--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <h1 id="title">Coding Quiz Challenge</h1>
     <button id="start">Start Quiz</button>
-    <script src="script.js"></script>
+    
     <form id="end-screen" class="hidden">
         <input
           type="text"
@@ -20,7 +20,8 @@
           id="initials"
           placeholder="Enter Initials"
         />
-        <input type="submit" value="Submit">
+        <input id="user-initials" type="submit" value="Submit">
     </form>
+    <script src="script.js"></script>
 </body>
 </html>
