--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href=/Users/jamiedelange/Desktop/textbook/homework/code-quiz/style.css>
+    <link rel="stylesheet" href=style.css>
 </head>
 <body>
     <div id="high-scores">
