--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     </div>
     <h1 id="title">Coding Quiz Challenge</h1>
     <button id="start">Start Quiz</button>
-    
-    <form id="end-screen" class="hidden">
-        <input
-          type="text"
-          name="initials"
-          id="initials"
-          placeholder="Enter Initials"
-        />
-        <input id="user-initials" type="submit" value="Submit">
-    </form>
+    <div id="scoreResult"></div>
+        <form id="end-screen" class="hidden">
+            <input
+            type="text"
+            name="initials"
+            id="initials"
+            placeholder="Enter Initials"
+            />
+            <input id="user-initials" type="submit" value="Submit">
+        </form>
     <script src="script.js"></script>
 </body>
 </html>
