--- a/high-score.html
+++ b/high-score.html
@@ -10,7 +10,7 @@
     <a href="./index.html">Back</a>
     <h1 id="title">High Scores</h1>
     <div id="scorelist"></div>
-    <script src="script.js">
+    <script src="logic.js">
         scoreList = 0;
 
         var listScoresEl = document.createElement("li");
